@@ -25,6 +25,7 @@ IDR_TRAYMENU MENU
 		MENUITEM "&Open...", IDM_OPEN
 		MENUITEM "&Stop", IDM_STOP
 		MENUITEM "File &information...", IDM_FILE_INFO
+		MENUITEM "Save as &WAV...", IDM_SAVE_WAV, GRAYED
 		MENUITEM "&About WASAP...", IDM_ABOUT
 		MENUITEM "&Exit", IDM_EXIT
 	}
