@@ -1,3 +1,11 @@
+2009-06-01  Piotr Fusik  <fox@scene.pl>
+* win32/wasap/wasap.c, win32/gui.rc, win32/gui.h: added "Save as WAV"
+
+* raw2c.pl: made shorter
+
+* asap2wav.c: error message for trailing options which were silently ignored
+
+
 2009-05-29  Piotr Fusik  <fox@scene.pl>
 * win32/Makefile, asap.c, win32/winamp/in_asap.c, win32/winamp/ipc_pe.h,
   win32/winamp/wa_ipc.h: switched from VS2008 to MinGW
